--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* css variables */
 }
 
 .dark {
@@ -24,7 +23,10 @@ body {
   --edit-profile-bg: #1f2632;
   --h5-text: #cee3e9;
   --post-time: hsl(152, 100%, 97%);
-  --toggle-bg: hotpink;
+  --toggle-bg: #7efac8;
+  --error-icon: #7efac8;
+  --footer-link: #7efac8;
+  --footer-link-hover: #72c6a0;
 }
 
 .light {
@@ -43,5 +45,8 @@ body {
   --edit-profile-bg: hsl(217, 19%, 24%);
   --h5-text: #1f2632;
   --post-time: hsl(217, 19%, 38%);
-  --toggle-bg: hotpink;
+  --toggle-bg: #7efac8;
+  --error-icon: #1f2632;
+  --footer-link: #7efac8;
+  --footer-link-hover: #72c6a0;
 }
